--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ langchain-core==0.3.41
 langchain-openai==0.3.7
 langgraph==0.3.5
 langsmith==0.3.11
-requests
-typing_extensions
+requests==2.32.4
+typing_extensions==4.13.2
